# mva_sb_generative

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
DeepGSB/results/stunnel-05.21/deepgsb-ac-std0.5-mf1/: log.txt
DeepGSB/results/stunnel-05.21/deepgsb-ac-std1-mf1/: log.txt
DeepGSB/results/stunnel-05.21/deepgsb-ac-std2-mf1/: log.txt
DeepGSB/results/stunnel-05.21/deepgsb-c-std0.5-mf1/: log.txt
DeepGSB/results/stunnel-05.21/deepgsb-c-std1-mf1/: log.txt
DeepGSB/results/stunnel-05.21/deepgsb-c-std2-mf1/: log.txt
latex/: bibliography.bib  commandes_math.tex  custom.tex  main.tex  neurips_2022.sty  packages.tex  parameters.tex
latex/setup/: acl_natbib.bst  math.tex  neurips_2022.sty  packages.tex
